# endless-hole

./: .gitignore  .gitmodules  Cargo.toml  DEV.md  README.md  justfile
.cargo/: config.toml
.github/workflows/: build.yaml  vendor.yaml
kernel/: Cargo.toml  build.rs
kernel/src/: bss.rs  logging.rs  main.rs  memory.rs  psci.rs  running_image.rs  start.S  thread.rs  timer.rs  uart.rs
kernel/src/exception/: exception_vector.S  handlers.rs  interrupt.rs  mod.rs
kernel/src/exceptions/: handlers.rs  mod.rs
kernel/src/exceptions/interrupt/: mod.rs
kernel/src/exceptions/interrupt/controller/: gic.rs  gic2.rs  mod.rs
kernel/src/platform/: device_tree.rs  mod.rs
kernel_core/: Cargo.toml
kernel_core/src/: lib.rs  logger.rs
kernel_core/src/collections/: arc_swap.rs  handle_allocator.rs  handle_map.rs  mod.rs
kernel_core/src/exceptions/: interrupt.rs  mod.rs
kernel_core/src/exceptions/interrupt/: handler.rs  mod.rs
kernel_core/src/memory/: asid_pool.rs  buddy.rs  heap.rs  mod.rs  page_table.rs  subtract_ranges.rs
kernel_core/src/platform/: cpu.rs  device_tree.rs  mod.rs  timer.rs
kernel_core/src/platform/device_tree/: fdt.rs  iter.rs  mod.rs  test-tree-smp8.fdt  test-tree.fdt
kernel_core/src/process/: mod.rs
kernel_core/src/process/thread/: mod.rs  scheduler.rs
spec/: README.md  ihvm.md  kernel.md
