[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
kernel_core = { path = "../kernel_core"}
itertools = { version = "^0.13", default-features = false }
log = { version = "^0.4" }
byteorder = { version = "^1.5", default-features = false }
bitfield = { version = "^0.17" }
spin = "^0.9"
snafu = { version = "^0.8", default-features = false, features = ["unstable-core-error"] }

[build-dependencies]
vergen = { version = "^9", features = ["build", "cargo"]}
vergen-git2 = { version = "^1", features = ["build"] }
