[package]
name = "kernel_core"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { version = "^0.13", default-features = false }
snafu = { version = "^0.8", default-features = false, features = ["unstable-core-error"] }
byteorder = { version = "^1.5", default-features = false }

[dev-dependencies]
paste = "^1.0"
test-case = "^3.3"
